# CrewAI-Translation-Crew

./: .env.example  .gitattributes  .gitignore  README.md  __init__.py  agents (1).py  agents.py  benchmark.py  config (1).yaml  config.py  config.yaml  document_io.py  evaluation.py  main (2).py  main.py  ollama_setup.ps1  ollama_setup.sh  pyproject.toml  requirements.txt  translation_engine.py  translation_system.py  utils (1).py  utils.py
