[project]
name = "crewai-translation-crew"
version = "0.1.0"
description = "Multi-agent DOCX translation system using CrewAI and Ollama"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai>=0.28.0",
    "python-docx>=0.8.11",
    "pyyaml>=6.0",
    "litellm>=1.32.0",
    "sacrebleu>=2.3.1",
    "python-dotenv>=1.2.2",
]
